# dexterity-interface

./: .gitignore  .gitmodules  Dockerfile  README.md  chat.py  frames.gv  index.html  output.txt  requirements.txt
backend-ros/: frames.gv
backend-ros/src/PandaController/: .gitignore  CMakeLists.txt  Dockerfile  README.md
backend-ros/src/PandaController/include/: Kinematics.h  PandaController.h
backend-ros/src/PandaController/src/: ForceTorqueListener.cpp  Gripper.cpp  PandaController.cpp  PandaControllerAccessors.cpp
backend-ros/src/authoring-msgs/: CMakeLists.txt  package.xml
backend-ros/src/authoring-msgs/action/: Authoring.action
backend-ros/src/authoring-msgs/msg/: Action.msg  Command.msg  POI.msg  POIArray.msg
backend-ros/src/interactive_marker_proxy_noetic/: AUTHORS.md  CMakeLists.txt  README.md
backend-ros/src/interactive_marker_proxy_noetic/src/: proxy.cpp
backend-ros/src/interface/: CMakeLists.txt
backend-ros/src/interface/launch/: vision.launch
backend-ros/src/interface/scripts/: basic_controls.py  scene_handler.py
backend-ros/src/interface/src/: basic_controls.cpp
backend-ros/src/interface/urdfs/: panda.urdf  rectangle.urdf
backend-ros/src/panda-primitives/: .gitignore  CMakeLists.txt  Dockerfile  README.md  package.xml
backend-ros/src/panda-ros-msgs/: CMakeLists.txt
backend-ros/src/panda_ros/: CMakeLists.txt  README.md  package.xml
dexterity-interface/: frames.gv
dexterity-interface/src/interface/: CMakeLists.txt  package.xml
frontend/: Dockerfile  LLMChat.js  Visualizer.js  index.html  package-lock.json  package.json
(+61 files in other folders)
